@@ -1,3 +1,7 @@
+2005-07-25  Hans de Graaff  <hans@degraaff.org>
+
+	* Checkbot 1.76 is released.
+
 2005-06-07  Hans de Graaff  <hans@degraaff.org>
 
 	* checkbot (printServerProblems): Include title of page.
